# k-anonymity

./: .gitignore  Main.hs  README.md  Util.hs  config.yaml  k-anonymity.cabal  stack.yaml
Data/: dataset10.txt  dataset100.txt
app/: Main.hs
data/: sample
src/: Util.hs
