name:                k-anonymity
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KENNN/k-anonymity#readme
license:             BSD3
license-file:        LICENSE
author:              KENN
maintainer:          cent.rngttwt@gmail.com
copyright:           2017 KENN
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util
  build-depends:       base >= 4.7 && < 5
                     , split
                     , random-shuffle
                     , yaml
  default-language:    Haskell2010

executable k-anonymity
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , split
                     , random-shuffle
                     , yaml
                     , k-anonymity
  default-language:    Haskell2010

test-suite k-anonymity-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , split
                     , random-shuffle
                     , yaml
                     , k-anonymity
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KENNN/k-anonymity
